# uchile_manipulation

bender_arm_control/: CMakeLists.txt  package.xml  setup.py
bender_arm_control/install/: README.md
bender_arm_control/launch/: arm_teleop.launch  monitor_l_arm.launch  planning.launch  planning2.launch  planning_python.launch
bender_arm_control/scripts/: arm_teleop.py  arm_teleop_opera.py  vlc_video.py
bender_arm_control/src/: bender_planning.cpp  manual_grasp.cpp  octomap_pub.cpp
bender_arm_control/srv/: Grasp.srv
bender_arm_planning/: CMakeLists.txt  bender_capabilities_plugin_description.xml  package.xml
bender_arm_planning/database/: readme.txt
bender_arm_planning/include/bender_arm_planning/: capability_map.h  capability_map_service.h  capmap_service.h  grasp_point.h  manage_octomap_service_capability.h
bender_arm_planning/install/: install.sh
bender_arm_planning/launch/: gen_map.launch
bender_arm_planning/msg/: GraspPosition.msg  OctomapOptions.msg
bender_arm_planning/src/: capability_map.cpp  capability_map_generator.cpp  capability_map_service.cpp  capmap_service.cpp  cm_load_test.cpp  grasp_point.cpp  manage_octomap_service_capability.cpp
bender_arm_planning/src/trajectory_evaluation/: data_extractor.cpp  data_extractor2.cpp  gravitational_torque_estimation.cpp  gravitational_trajectory.cpp  online_torque_estimation.cpp  pos_penal_r.cpp  position_manipulability.cpp  position_penalty.cpp  position_penalty2.cpp  torque_penalty.cpp  torque_penalty2.cpp  trajectory_position_penalty.cpp  trajectory_position_penalty2.cpp  trajectory_test.cpp  trajectory_torque.cpp  trajectory_torque_estimation.h
bender_arm_planning/srv/: AddObjectACM.srv  CapabilityMapBestDistance.srv  CapabilityMapGrasp.srv  ManageOctomap.srv
bender_control/: CMakeLists.txt  package.xml
bender_ikfast_arm/: CMakeLists.txt  bender_l_arm_moveit_ikfast_plugin_description.xml  bender_r_arm_moveit_ikfast_plugin_description.xml  package.xml
bender_ikfast_arm/include/: ikfast.h
bender_ikfast_arm/src/: bender_l_arm_ikfast_moveit_plugin.cpp  bender_l_arm_ikfast_solver.cpp  bender_r_arm_ikfast_moveit_plugin.cpp  bender_r_arm_ikfast_solver.cpp
bender_ikfast_l_arm/: CMakeLists.txt  bender_l_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
bender_ikfast_l_arm/src/: bender_l_arm_ikfast_moveit_plugin.cpp  bender_l_arm_ikfast_solver.cpp
bender_ikfast_r_arm/: CMakeLists.txt  bender_r_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
bender_ikfast_r_arm/src/: bender_r_arm_ikfast_moveit_plugin.cpp  bender_r_arm_ikfast_solver.cpp
bender_manipulation/: CMakeLists.txt  package.xml
bender_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
bender_moveit_config/config/: bender.srdf  bender_asus.srdf  bender_light_head.srdf  bender_moveit.rviz  bender_standard.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml
bender_moveit_config/install/: README.md
bender_moveit_config/launch/: bender_moveit.launch  bender_moveit_sensor_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group_test.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  moveit_test_capmap.rviz  planning_context.launch  trajectory_execution.launch.xml
bender_moveit_config/scenes/: box.scene  industrial.scene  shelf.scene  (+1 more)
bender_moveit_python/: CMakeLists.txt  package.xml  rosdoc.yaml  setup.py
control_util/: package.xml
dynamixel_controllers/: package.xml
dynamixel_controllers/nodes/: controller_manager.py
dynamixel_controllers/src/dynamixel_controllers/: joint_controller.py  joint_trajectory_action_controller.py
dynamixel_driver/: package.xml
dynamixel_driver/scripts/: info_dump.py  set_position.py
dynamixel_driver/src/dynamixel_driver/: dynamixel_io.py  dynamixel_serial_proxy.py
dynamixel_msgs/: CMakeLists.txt  package.xml
dynamixel_msgs/msg/: ErrorCode.msg
hb_grasp_generator/: CMakeLists.txt  package.xml
hb_grasp_generator/config/: bender_grasp_generator.yaml  grasp_generator.yaml  test.rviz
hb_grasp_generator/include/hb_grasp_generator/: grasp_filter.h  grasp_generator.h  grasp_options.h  gravitational_torque_estimation.h
hb_grasp_generator/launch/: test.launch  test_grasp_filter.launch  test_grasp_generator.launch
hb_grasp_generator/src/: grasp_filter.cpp  grasp_filter_test.cpp  grasp_generator.cpp  grasp_options.cpp  gravitational_torque_estimation.cpp  simple_grasps_test.cpp  test_grasp_filter.cpp  test_grasp_generator.cpp
hb_workspace_analysis/: CMakeLists.txt  package.xml  plugin_description.xml  readme.md  setup.py
moveit_simple_grasps/: CMakeLists.txt  package.xml
moveit_simple_grasps/src/: grasp_filter.cpp  grasp_filter_test.cpp  simple_grasps.cpp  simple_grasps_server.cpp  simple_grasps_test.cpp
old_bender_moveit_config/: .setup_assistant  package.xml
uchile_grasp_generator/: CMakeLists.txt  package.xml
uchile_grasp_generator/include/uchile_grasp_generator/: grasp_filter.h  grasp_generator.h  grasp_options.h  gravitational_torque_estimation.h
uchile_grasp_generator/launch/: test_grasp_filter.launch  test_grasp_generator.launch
uchile_grasp_generator/src/: grasp_filter.cpp  grasp_generator.cpp  grasp_options.cpp  gravitational_torque_estimation.cpp  test_grasp_filter.cpp  test_grasp_generator.cpp
uchile_manipulation/: package.xml
uchile_workspace_analysis/: CMakeLists.txt  package.xml  plugin_description.xml  setup.py
uchile_workspace_analysis/include/uchile_workspace_analysis/: capability_map_options.h  capability_map_plugin.h
uchile_workspace_analysis/launch/: db.launch  demo.launch  test_db.launch
uchile_workspace_analysis/msg/: GraspObject.msg  GraspPoint.msg  GraspStorage.msg
uchile_workspace_analysis/scripts/: test_marker_grasp.py
uchile_workspace_analysis/src/: capability_map_mongo.cpp  capability_map_options.cpp  capability_map_plugin.cpp
uchile_workspace_analysis/src/uchile_workspace_analysis/: interface.py
uchile_workspace_analysis/srv/: GetCapabilityMap.srv
(+39 files in other folders)
