<?xml version="1.0"?>
<package format="2">
    <!-- 
      <depend>             : build, export, and execution dependencies 
      <build_depend>       : pkgs needed at compile time (any file or library)
      <build_export_depend>: pkgs needed to build libraries against this pkg
      <exec_depend>        : pkgs needed to run this code. (e.g: shared libs)
      <test_depend>        : only additional deps for unit testing (e.g: gtest)
      <doc_depend>         : dependencies for documentation generation

      See also:
      - http://wiki.ros.org/catkin/package.xml
      - http://www.ros.org/reps/rep-0140.html
    -->


    <!-- PACKAGE INFORMATION -->
    <!-- - - - - - - - - - - -->

    <name>bender_ikfast_arm</name>
    <version>2.0.0</version>
    
    <description>The bender_ikfast_arm package</description>

    <!-- team -->
    <maintainer email="bender.devel@gmail.com">
      Bender Team - UChile Homebreakers</maintainer>
    <author     email="bender.devel@gmail.com">
      Bender Team - UChile Homebreakers</author>

    <!-- specific developers -->
    <maintainer email="rorro.mr@gmail.com">Rodrigo Muñoz</maintainer>
    <author>Rodrigo Muñoz</author>

    <!-- about bender and related repository -->
    <url type="website">bender.li2.uchile.cl</url>
    <url type="bugtracker">
      https://bitbucket.org/uchile-robotics-die/bender_manipulation/issues</url>
    <url type="repository">
      https://bitbucket.org/uchile-robotics-die/bender_manipulation</url>

    <license>TODO</license>
    

    <!-- SYSTEM DEPENDENCIES -->
    <!-- - - - - - - - - - - -->

    <!--  build system tool to build this package -->
    <buildtool_depend>catkin</buildtool_depend>


    <!-- build, export, and execution dependencies -->
    <depend>moveit_core</depend>
    <depend>liblapack-dev</depend>
    <depend>roscpp</depend>
    <depend>tf_conversions</depend>
    <depend>pluginlib</depend>


    <!-- build dependencies -->


    <!-- export dependencies -->


    <!-- excution dependencies -->
    <!--exec_depend>python-aiml</exec_depend-->


    <!-- test dependencies -->


    <!-- documentation dependencies -->


    <!-- export -->
    <export>
        <moveit_core plugin="${prefix}/bender_l_arm_moveit_ikfast_plugin_description.xml"/>
        <moveit_core plugin="${prefix}/bender_r_arm_moveit_ikfast_plugin_description.xml"/>
    </export>

</package>

