<package>
  <name>dynamixel_driver</name>
  <version>0.4.0</version>
  <description>
    This package provides low level IO for Robotis Dynamixel servos.
    Fully supports and was tested with AX-12, AX-18, RX-24, RX-28,
    MX-28, RX-64, EX-106 models. Hardware specific constants are
    defined for reading and writing information from/to Dynamixel
    servos. This low level package won't be used directly by most
    ROS users. The higher level dynamixel_controllers and specific
    robot joint controllers make use of this package.
  </description>

  <!-- original -->
  <maintainer email="arebgun@gmail.com">Antons Rebguns</maintainer>
  <author>Antons Rebguns</author>
  <author>Cody Jorgensen</author>

  <!-- team -->
  <maintainer email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</maintainer>
  <author     email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</author>

  <!-- specific developers -->
  <maintainer email="rorro.mr@gmail.com">Rodrigo Muñoz</maintainer>
  <author>Rodrigo Muñoz</author>

  <!-- about bender and related repository -->
  <url type="website">bender.li2.uchile.cl</url>
  <url type="bugtracker">
    https://bitbucket.org/uchile-robotics-die/bender_manipulation/issues</url>
  <url type="repository">
    https://bitbucket.org/uchile-robotics-die/bender_manipulation</url>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>python-serial</run_depend>

  <export>

  </export>
</package>
