<package>
  <name>dynamixel_msgs</name>
  <version>0.4.0</version>
  <description>
    Common messages used throughout dynamixel_motor stack.
  </description>

  <!-- original -->
  <maintainer email="arebgun@gmail.com">Antons Rebguns</maintainer>
  <author>Antons Rebguns</author>

  <!-- team -->
  <maintainer email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</maintainer>
  <author     email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</author>

  <!-- specific developers -->
  <maintainer email="rorro.mr@gmail.com">Rodrigo Muñoz</maintainer>
  <author>Rodrigo Muñoz</author>

  <!-- about bender and related repository -->
  <url type="website">bender.li2.uchile.cl</url>
  <url type="bugtracker">
    https://bitbucket.org/uchile-robotics-die/bender_manipulation/issues</url>
  <url type="repository">
    https://bitbucket.org/uchile-robotics-die/bender_manipulation</url>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
