<?xml version="1.0"?>
<package>
  <name>hb_grasp_generator</name>
  <version>0.0.0</version>
  <description>The hb_grasp_generator package</description>

  <maintainer email="rmunozriffo@ing.uchile.cl">rodrigo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>eigen_stl_containers</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>moveit_msgs</build_depend>  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_visual_tools</run_depend>

</package>
