<package>
  <name>moveit_simple_grasps</name>
  <version>1.2.1</version>
  <description>
    A basic grasp generator for simple objects such as blocks or cylinders for use with the MoveIt! pick and place pipeline. 
    Does not consider friction cones or other dynamics.
  </description>

  <!-- original -->
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <!-- team -->
  <maintainer email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</maintainer>
  <author     email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</author>

  <!-- specific developers -->
  <maintainer email="rorro.mr@gmail.com">Rodrigo Muñoz</maintainer>
  <author>Rodrigo Muñoz</author>

  <!-- about bender and related repository -->
  <url type="website">bender.li2.uchile.cl</url>
  <url type="bugtracker">
    https://bitbucket.org/uchile-robotics-die/bender_manipulation/issues</url>
  <url type="repository">
    https://bitbucket.org/uchile-robotics-die/bender_manipulation</url>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>moveit_msgs</build_depend>  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_visual_tools</run_depend>

</package>
