<?xml version="1.0"?>
<package>
  <name>uchile_manipulation</name>
  <version>0.0.0</version>
  <description>The uchile_manipulation package</description>  


  <!-- team -->
  <maintainer email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</maintainer>
  <author     email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</author>

  <!-- specific developers -->
  <maintainer email="rorro.mr@gmail.com">Rodrigo Muñoz</maintainer>
  <author>Rodrigo Muñoz</author>

  <!-- about bender and related repository -->
  <url type="website">bender.li2.uchile.cl</url>
  <url type="bugtracker">
    https://bitbucket.org/uchile-robotics-die/uchile_manipulation/issues</url>
  <url type="repository">
    https://bitbucket.org/uchile-robotics-die/uchile_manipulation</url>

  <license>TODO</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <!--   <run_depend>message_runtime</run_depend> -->
  <export>
    <metapackage/>
  </export>

</package>