<?xml version="1.0"?>
<package>
  <name>uchile_workspace_analysis</name>
  <version>0.0.0</version>
  <description>The uchile_workspace_analysis package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rodrigo@todo.todo">rodrigo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/uchile_workspace_analysis</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>uchile_grasp_generator</build_depend>
  <build_depend>warehouse_ros</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>warehouse_ros</run_depend>
  <run_depend>uchile_grasp_generator</run_depend>


  <!-- MoveIt! plugin -->
  <export>
    <moveit_ros_move_group plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
